# Blender-MCP

./: LICENSE  README.md
blender-mcp/: addon.py
mcp-client-python/: pyproject.toml
mcp-client-python/api/: .env  main.py  mcp_client.py
mcp-client-python/api/conversations/: conversation_2025-06-28_00-07-48.json  conversation_2025-06-28_00-08-26.json  conversation_2025-06-28_00-09-07.json  conversation_2025-06-28_00-09-39.json  conversation_2025-06-28_00-10-10.json  conversation_2025-07-01_17-17-20.json  conversation_2025-07-01_17-23-22.json  conversation_2025-07-01_17-30-39.json  conversation_2025-07-01_17-31-23.json  conversation_2025-07-01_17-32-37.json  conversation_2025-07-01_17-33-09.json
mcp-client-python/front/: chatbot.py
