[project]
name = "mcp-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "api>=0.0.7",
    "fastapi>=0.115.13",
    "google-generativeai>=0.8.5",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
]
